# HIS

./: .coverage
bitarith_project/: README.md
bitarith_project/tests/: test_ieee754.py  test_ieee754_extra.py  test_int_codes.py  test_sign_magnitude_ops.py
lab1/: README.md  pyproject.toml
lab1/src/bitarith/: __main__.py  bcd5421.py  ieee754.py  int_codes.py  sign_magnitude_ops.py
lab1/tests/: test_bcd5421.py  test_bcd5421_extra.py  test_bits.py  test_bits_extra.py  test_int_codes_extra.py  test_main_cli.py  test_sign_magnitude_ops.py
lab2/: .gitignore  README.md  pyproject.toml  run.py
lab2/logiclab/: __init__.py  __main__.py
lab2/logiclab/application/: __init__.py  menu_controller.py
lab2/logiclab/domain/: __init__.py  analysis.py  ast.py  karnaugh.py  minimization.py  models.py  parser.py
lab2/logiclab/presentation/: __init__.py  console.py  report_formatter.py
lab2/tests/: test_analysis.py  test_ast.py  test_console_and_karnaugh.py  test_minimization.py  test_parser.py
lab3/: Equation.py  Implicant.py  __init__.py  boolean_minimizer.py  boolean_models.py  circuit_equations.py  circuit_specs.py  circuits.py  constants.py  main.py  qm.py
lab3/schema/: 8421.circ
lab3/tests/: test_circuits.py  test_qm.py
lab4/: README.md  pyproject.toml  run.py
lab4/hashlab/: __init__.py
lab4/hashlab/application/: __init__.py  service.py
lab4/hashlab/domain/: __init__.py  avl_tree.py  exceptions.py  hash_table.py  hashing.py  models.py
lab4/hashlab/presentation/: __init__.py  console.py  formatter.py
lab4/tests/: __init__.py  test_avl_tree.py  test_console.py  test_hash_table.py  test_hashing.py
(+5 files in other folders)
